--- a/iviz_model_service_lib/iviz_model_service_lib.csproj
+++ b/iviz_model_service_lib/iviz_model_service_lib.csproj
@@ -3,8 +3,8 @@
     <PropertyGroup>
         <AssemblyName>Iviz.ModelService.Lib</AssemblyName>
         <RootNamespace>Iviz.ModelService</RootNamespace>
-        <LangVersion>9</LangVersion>
-        <TargetFrameworks>net5.0;netstandard2.1</TargetFrameworks>
+        <LangVersion>default</LangVersion>
+        <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
