--- a/iviz_msgs/iviz_msgs.csproj
+++ b/iviz_msgs/iviz_msgs.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <AssemblyName>Iviz.Msgs</AssemblyName>
     <RootNamespace>Iviz.Msgs</RootNamespace>
-    <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net5.0;net6.0;netstandard2.1</TargetFrameworks>
     <Nullable>enable</Nullable>
     <LangVersion>default</LangVersion>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
