--- a/iviz_msgs/iviz_msgs.csproj
+++ b/iviz_msgs/iviz_msgs.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <AssemblyName>Iviz.Msgs</AssemblyName>
     <RootNamespace>Iviz.Msgs</RootNamespace>
-    <TargetFrameworks>net5.0;net6.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net6.0;net5.0;netstandard2.1</TargetFrameworks>
     <Nullable>enable</Nullable>
     <LangVersion>default</LangVersion>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
