--- a/iviz_utils/iviz_utils.csproj
+++ b/iviz_utils/iviz_utils.csproj
@@ -11,6 +11,7 @@
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
       <DebugSymbols>true</DebugSymbols>
       <DebugType>full</DebugType>
+      <PlatformTarget>AnyCPU</PlatformTarget>
     </PropertyGroup>
 
     <ItemGroup>
