--- a/iviz_tools/iviz_tools.csproj
+++ b/iviz_tools/iviz_tools.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
       <PackageReference Include="System.Buffers" Version="4.5.1" />
       <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
