--- a/iviz/Packages/manifest.json
+++ b/iviz/Packages/manifest.json
@@ -17,7 +17,7 @@
     "com.unity.xr.arcore": "4.2.1",
     "com.unity.xr.arfoundation": "4.2.2",
     "com.unity.xr.arkit": "4.2.2",
-    "com.unity.xr.interaction.toolkit": "1.0.0-pre.8",
+    "com.unity.xr.interaction.toolkit": "2.0.1",
     "com.unity.xr.openxr": "1.3.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
