--- a/iviz/Assets/VNC/VNC.asmdef
+++ b/iviz/Assets/VNC/VNC.asmdef
@@ -7,7 +7,8 @@
         "GUID:8fcae4bc21c4646db87e41dd8bdaa097",
         "GUID:ac7ae464766a74b6596529fe63a3379c",
         "GUID:fe685ec1767f73d42b749ea8045bfe43",
-        "GUID:0775440a70b5e459d9534389409d8fa8"
+        "GUID:0775440a70b5e459d9534389409d8fa8",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
