--- a/iviz/Assets/VNC/VNC.asmdef
+++ b/iviz/Assets/VNC/VNC.asmdef
@@ -8,7 +8,8 @@
         "GUID:0775440a70b5e459d9534389409d8fa8",
         "GUID:fe685ec1767f73d42b749ea8045bfe43",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
