--- a/iviz_dynamic_msg_lib/iviz_dynamic_msg_lib.csproj
+++ b/iviz_dynamic_msg_lib/iviz_dynamic_msg_lib.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <LangVersion>9</LangVersion>
+        <LangVersion>default</LangVersion>
         <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
         <Nullable>enable</Nullable>
         <AssemblyName>Iviz.MsgsGen.Dynamic.Lib</AssemblyName>
